--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 
 .planeholder{
-width:98%;
+        width:98%;
 	height:1000px;
-	position:absolute;
+	position:relative;
 	overflow:scroll;
+	z-index:3;
 }
 .plane{		
 top:250px;
@@ -39,7 +40,7 @@ animation:planeflying 7s  ;
 
 .plane2{
 	
-	position:absolute;
+	position:relative;
 	background-image:url('https://i.pinimg.com/originals/6d/55/cb/6d55cbbcf1e7a742f61d9278fb710456.png');
 	background-size:175px 75px;
         height:75px;
@@ -53,7 +54,7 @@ animation:planeflying 7s  ;
 
 .plane3{
 	
-	position:absolute;
+	position:relative;
 	background-image:url('https://i.pinimg.com/originals/f2/a8/6f/f2a86fe6bae81f276b220c76fff072ec.png');
 	background-size:175px 75px;
         height:75px;
@@ -78,7 +79,7 @@ animation:planeflying 7s  ;
 
 
 .plane4{
-	position:absolute;
+	position:relative;
 	background-image:url('https://i.pinimg.com/originals/70/a2/07/70a207ca8950f441ed0c2261a7829808.png');
 	background-size:175px 75px;
         height:75px;
@@ -91,7 +92,7 @@ animation:planeflying 7s  ;
 
 
 .plane5{
-	position:absolute;
+	position:relative;
 	background-image:url('https://i.pinimg.com/originals/da/dc/6c/dadc6c53be020be67fe094bed3f9223d.png');
 	background-size:175px 75px;
         height:75px;
