--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ z-index:999;
 width:75px;
    height:75px;
 background-color:rgb(222,137,240);
-float:left;
+float:right;
 background-image:url('https://i.pinimg.com/originals/32/e3/b5/32e3b500464be6825895808149cc1ae6.png');
 	background-size:75px 75px;
 	background-repeat:no-repeat;
