--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@ position:absolute;
 border-color:rgb(0,255,255);
 	border-style:solid;
 	border-width:thick;
-width:550px;
-height:550px;
+background-image:url('https://i.pinimg.com/originals/2c/c7/b2/2cc7b28406fed947d985c4b1facab092.jpg');
+	background-size:649px 649px;
+background-repeat:no-repeat;
+width:650px;
+height:650px;
  z-index:1300;
 animation:planeflying 7s  ;
 -webkit-animation:planeflying 7s  ;
