--- a/style.css
+++ b/style.css
@@ -47,7 +47,15 @@ border-color:rgb(255, 255, 255);
         -webkit-animation: cmoney 10s infinite;/* Safari 4.0 - 8.0 */
 }
 
+.ikeannaoptions{
+	position:relative;
+	border-radius:50px;
+        height:100px;
+	width:300px;
+	border-style:outset;
+	       border-color:rgba(0, 355, 355);
 
+}
 
 .plane3{
 	
