--- a/style.css
+++ b/style.css
@@ -12,11 +12,8 @@ position:relative;
 border-color:rgb(0,255,255);
 	border-style:solid;
 	border-width:thick;
-background-image:url('https://i.pinimg.com/originals/2c/c7/b2/2cc7b28406fed947d985c4b1facab092.jpg');
-	background-size:649px 649px;
-background-repeat:no-repeat;
-width:650px;
-height:650px;
+width:99%;
+height:99%;
 }
 
 .plane2{
