--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ background-color:rgb(0,0,0);
 	   top:15%;
 	left:50%;
        list-style: none;
-        position:fixed;
+        position:absolute;
 	z-index:30;
     }
 
