--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ position:relative;
 border-color:rgb(0,255,255);
 	border-style:solid;
 	border-width:thick;
+
+width:99%;
+height:99%;
+
 }
 
 .plane2{
