--- a/style.css
+++ b/style.css
@@ -307,8 +307,8 @@ background-color:rgb(0,0,0);
 
 ul li {
 position:relative;
-     width:1px; 
-	height:1px;
+    width:99%;
+height:99%;
     font-size:20px;
     font-family: ariel;
     text-align:center;
