--- a/style.css
+++ b/style.css
@@ -303,6 +303,8 @@ background-color:rgb(0,0,0);
        list-style: none;
         position:absolute;
 	z-index:30;
+        width:99%;
+height:99%;
     }
 
 ul li {
