--- a/style.css
+++ b/style.css
@@ -335,9 +335,10 @@ position:relative;
 }
 ul li:hover ul li {
 z-index:999;
+width:99%;
+height:99%;
     display: block;
 Position:relative;
-right:10px;
 }
 
 body{
