--- a/style.css
+++ b/style.css
@@ -12,9 +12,8 @@ position:absolute;
 border-color:rgb(0,255,255);
 	border-style:solid;
 	border-width:thick;
-
-width:799%;
-height:1099%;
+width:799px;
+height:1099px;
 
 }
 
