--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ border-color:rgb(0, 255, 255);
 	z-index:99;
 	position:absolute;
 	border-radius:50px;
-        background-image:url('https://i.pinimg.com/originals/10/d6/30/10d6300b74ceb44a5d7a5471f533a28b.jpg');
+        background-image:url('https://i.pinimg.com/originals/bc/56/b3/bc56b31a50e519be2ed335a47e75bc62.gif');
 	background-size:360px 360px;
 	border-radius:50%;
         height:360px;
