--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ border-color:rgb(0, 255, 255);
 	z-index:99;
 	position:absolute;
 	border-radius:50px;
-        background-image:url('https://i.pinimg.com/originals/45/54/4f/45544f66c93d134306985c2fa1473ce9.jpg');
+        background-image:url('https://i.pinimg.com/originals/d5/76/eb/d576eb5196c292219de847dd8b1b25fc.gif');
 	background-size:360px 360px;
 	border-radius:50%;
         height:360px;
