--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ width:360px;
 	background-color:rgba(0, 0, 0, .5);
         z-index:99;
 	position:absolute;
-	background-image:url('https://i.pinimg.com/236x/ea/75/be/ea75be8ede13d420c4f441968220326d.jpg');
+	background-image:url('https://i.pinimg.com/originals/97/5b/fc/975bfc4d2cb51034ac290903ea800727.png');
 	background-size:200px 200px;
 	border-radius:50%;
         height:200px;
