--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ height:1099px;
 
 }
 
+.headerimage{
+background-image:url("https://i.pinimg.com/originals/19/cf/36/19cf36313ad09237c9b270ce6ae9c239.jpg");
+background-size:800px 600px;
+border-style:outset;
+border-color:rgb(0,255,0);
+border-radius:40px;
+position:absolute;
+opacity:.6;
+height:600px;
+width:800px;
+top:45%;
+}
 .plane2{
 	
 	position:relative;
