--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ height:1099px;
 .headerimage{
 background-image:url("https://i.pinimg.com/originals/b6/e0/e4/b6e0e4a3820008d80cb023effd466e40.jpg");
 background-size:800px 600px;
+margin-left:200px;
 border-style:outset;
 border-color:rgb(0,255,0);
 border-radius:40px;
