--- a/style.css
+++ b/style.css
@@ -14,6 +14,28 @@ height:1099px;
 
 }
 
+	   .registration{
+	border-color:rgb(0, 255, 255);
+	background-color:rgb(255, 209, 94);
+        z-index:99;
+	position:relative;
+	border-radius:50px;
+        height:700px;
+	width:700px;
+	border-style:outset;
+}
+		   
+		   .registrationbutton{
+background-color:rgba(0, 0, 0);
+	background-size:300px 150px;      
+	  z-index:99;
+	position:relative;
+	border-radius:50px;
+        height:150px;
+	width:300px;
+	border-style:outset;
+}
+
 .headerimage{
 background-image:url("https://i.pinimg.com/originals/b6/e0/e4/b6e0e4a3820008d80cb023effd466e40.jpg");
 background-size:900px 600px;
