--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ top:45%;
 }
 
 .plane1{
-background-image:url(' https://github.com/diamondrolls/play/B0D14D54-0145-481C-BDD9-E92253BBF81E.png');
+background-image:url(' https://github.com/diamondrolls/play/images/B0D14D54-0145-481C-BDD9-E92253BBF81E.png');
 position:relative;
 	background-size:175px 75px;
         height:75px;
@@ -353,7 +353,7 @@ Position:relative;
 }
 
 body{
-	background-image:url('https://i.pinimg.com/564x/77/19/9a/77199af306812bf5f8c00bf62b7491b0.jpg');
+	background-image:url('https://github.com/diamondrolls/homepage/images/030EF6A9-9AA2-4015-ABF3-84927C38DFDA.jpeg');
 	background-size:100% 2000px;
         overflow:hidden;   
 	 width:98%;
