--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ top:45%;
 
 .plane1{
 background-image:url(' https://github.com/diamondrolls/play/master/images/B0D14D54-0145-481C-BDD9-E92253BBF81E.png');
-position:relative;
+position:absolute;
 	background-size:175px 75px;
         height:75px;
 	width:175px;
