--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ Position:relative;
 }
 
 body{
-	background-image:url('https://github.com/diamondrolls/homepage/master/images/030EF6A9-9AA2-4015-ABF3-84927C38DFDA.jpeg');
+	background-image:url(' https://raw.githubusercontent.com/diamondrolls/homepage/master/images/030EF6A9-9AA2-4015-ABF3-84927C38DFDA.jpeg');
 	background-size:100% 2000px;
         overflow:hidden;   
 	 width:98%;
