--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ background-image:url('https://i.pinimg.com/originals/32/e3/b5/32e3b500464be68258
 	padding-top:50px;
 } 
 
-html {  background-image:url('https://i.pinimg.com/originals/d1/33/48/d13348d7a8b42622829ade83a8adfb19.jpg');
+html {  background-image:url(' https://raw.githubusercontent.com/diamondrolls/homepage/master/images/14D73D5C-795F-41DF-A505-6F36CBAB36E8.jpeg');
 	height:1200px;
 		width:100%;
 	overflow:scroll;
