--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ position:absolute;
 .plane2{
 	
 	position:relative;
-	background-color:rgb('255,255,255');
+	background-color:rgb(255,255,255);
 	background-size:75px 75px;
         height:75px;
 	width:75px;
@@ -66,7 +66,9 @@ position:absolute;
 .plane3{
 	
 	position:relative;
-	background-color:rgb('255,255,255');
+
+	background-color:rgb(255,255,255);
+
 	background-size:75px 75px;
         height:75px;
 	width:75px;
@@ -92,7 +94,9 @@ position:absolute;
 
 .plane4{
 	position:relative;
-	background-color:rgb('255,255,255');
+
+	background-color:rgb(255,255,255);
+
 	background-size:75px 75px;
         height:75px;
 	width:75px;
@@ -106,7 +110,9 @@ position:absolute;
 
 .plane5{
 	position:relative;
-	background-color:rgb('255,255,255');
+
+	background-color:rgb(255,255,255);
+
 	background-size:75px 75px;
         height:75px;
 	width:75px;
@@ -136,10 +142,6 @@ html {
 	overflow:scroll;
 }
 
-  color:rgb(255,0,0);
-  font-size:50px;
-	background-color:rgb(225, 225, 225);
-}
 
 h2{
 	font-size:20px;
