--- a/style.css
+++ b/style.css
@@ -51,13 +51,13 @@ position:absolute;
 .plane2{
 	
 	position:relative;
-	background-color:rgb(255,255,255);
+	background-image:url("https://cutewallpaper.org/24/meteor-png/silver-comet-meteor-photos-png-transparent-background-free-download-48515--freeiconspng.png");
 	background-size:75px 75px;
         height:75px;
 	width:75px;
 	top:200px;
-	animation:lit 3s infinite ;
-        -webkit-animation: lit 3s infinite;/* Safari 4.0 - 8.0 */
+	animation:money 3s infinite ;
+        -webkit-animation: money 3s infinite;/* Safari 4.0 - 8.0 */
 }
 
 
@@ -66,9 +66,7 @@ position:absolute;
 .plane3{
 	
 	position:relative;
-
-	background-color:rgb(255,255,255);
-
+	background-image:url("https://cutewallpaper.org/24/meteor-png/silver-comet-meteor-photos-png-transparent-background-free-download-48515--freeiconspng.png");
 	background-size:75px 75px;
         height:75px;
 	width:75px;
@@ -95,15 +93,15 @@ position:absolute;
 .plane4{
 	position:relative;
 
-	background-color:rgb(255,255,255);
+	background-image:url("https://cutewallpaper.org/24/meteor-png/silver-comet-meteor-photos-png-transparent-background-free-download-48515--freeiconspng.png");
 
 	background-size:75px 75px;
         height:75px;
 	width:75px;
 	top:200px;
 	top:500px;
-	animation:lit 2.5s infinite ;
-        -webkit-animation: lit 2.5s infinite;/* Safari 4.0 - 8.0 */
+	animation:money 2.5s infinite ;
+        -webkit-animation: money 2.5s infinite;/* Safari 4.0 - 8.0 */
 }
 
 
@@ -111,7 +109,7 @@ position:absolute;
 .plane5{
 	position:relative;
 
-	background-color:rgb(255,255,255);
+	background-image:url("https://cutewallpaper.org/24/meteor-png/silver-comet-meteor-photos-png-transparent-background-free-download-48515--freeiconspng.png");
 
 	background-size:75px 75px;
         height:75px;
