--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ position:absolute;
 .plane2{
 	
 	position:relative;
-	background-image:url("https://cutewallpaper.org/24/meteor-png/silver-comet-meteor-photos-png-transparent-background-free-download-48515--freeiconspng.png");
+	background-image:url("https://raw.githubusercontent.com/diamondrolls/homepage/master/images/21223E2D-11A2-4CBC-A013-87E64D948FB9.webp");
 	background-size:75px 75px;
-        height:75px;
-	width:75px;
+        height:90px;
+	width:90px;
 	top:200px;
 	animation:money 3s infinite ;
         -webkit-animation: money 3s infinite;/* Safari 4.0 - 8.0 */
@@ -66,10 +66,12 @@ position:absolute;
 .plane3{
 	
 	position:relative;
-	background-image:url("https://cutewallpaper.org/24/meteor-png/silver-comet-meteor-photos-png-transparent-background-free-download-48515--freeiconspng.png");
+
+	background-image:url("https://raw.githubusercontent.com/diamondrolls/homepage/master/images/21223E2D-11A2-4CBC-A013-87E64D948FB9.webp");
+
 	background-size:75px 75px;
-        height:75px;
-	width:75px;
+        height: 35px;
+	width:35px;
 	top:200px;
 	top:450px;
 	animation:money 2s infinite ;
@@ -93,7 +95,7 @@ position:absolute;
 .plane4{
 	position:relative;
 
-	background-image:url("https://cutewallpaper.org/24/meteor-png/silver-comet-meteor-photos-png-transparent-background-free-download-48515--freeiconspng.png");
+	background-image:url("https://raw.githubusercontent.com/diamondrolls/homepage/master/images/21223E2D-11A2-4CBC-A013-87E64D948FB9.webp");
 
 	background-size:75px 75px;
         height:75px;
@@ -109,11 +111,11 @@ position:absolute;
 .plane5{
 	position:relative;
 
-	background-image:url("https://cutewallpaper.org/24/meteor-png/silver-comet-meteor-photos-png-transparent-background-free-download-48515--freeiconspng.png");
+	background-image:url("https://raw.githubusercontent.com/diamondrolls/homepage/master/images/21223E2D-11A2-4CBC-A013-87E64D948FB9.webp");
 
 	background-size:75px 75px;
-        height:75px;
-	width:75px;
+        height:15px;
+	width:15px;
 	top:200px;
 	top:700px;
 	animation:money 3s infinite ;
