--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ Position:relative;
 }
 
 body{
-	background-image:url(' https://raw.githubusercontent.com/diamondrolls/homepage/master/images/52064439-B502-4E63-86A1-96A9CF5C1666.jpeg');
+	background-image:url(' https://raw.githubusercontent.com/diamondrolls/images/main/B5F60EAD-E37B-4236-A2F1-6241EE051639.png');
 	background-size:100% 1200px;
         overflow:hidden;   
 	 width:100%;
