--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ height:99%;
 Position:relative;
 }
 
-body{   background-image:url(" https://media.tenor.com/qe0yvYn14jUAAAAM/loop-hyper.gif");
+body{   background-image:url(" https://raw.githubusercontent.com/diamondrolls/images/main/443B6FE0-A7A5-4AA3-852F-8D668C0BDE1A.jpeg");
 
 	background-size:100% 1200px;
         overflow:hidden;   
