--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .plane1{
-background-image:url("");
+background-image:url("https://raw.githubusercontent.com/diamondrolls/images/main/5A3397CE-4193-4B6B-9A56-897543975D23.png");
     border-style:inset;
     
 position:absolute;
